Try to fix gallery alignment on homepage.

--- a/styles/index.less
+++ b/styles/index.less
@@ -410,6 +410,10 @@ h3 {
         clear: none; // necessary if an element above has float, otherwise rows will no longer align
     }
 
+    .sqs-block-gallery:not(:first-child) {
+        top: -78px;
+    }
+
     .sqs-block:not(.sqs-block-gallery) {
         // the z-index for elements that overlap w/ the gallery padding must be higher than
         // the z-index for the galler, otherwise they may not be shown
